these should have been commited with the last round of a whole bunch of changes

--- a/views/numbers.erb
+++ b/views/numbers.erb
@@ -9,7 +9,7 @@
  <center>
   <table width="150">
       <tr><td class="number"><%= @number %></td></tr>
-      <tr><td><center><a class="next" href="/">Next</a></center></td></tr>
+      <tr><td><center><a class="next" onClick="document.location.reload(true)" href>Next</a></center></td></tr>
   </table>
  </center>
 </body>
